--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>2048 MAD</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2048</h1>
+      <h1 class="title">2048</h1> <h3 style="float:left; margin-top:0;">MAD</h3>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -75,13 +75,16 @@
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
-    <hr>
-    <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <p class="game-explanation">
+      <strong class="important">Special condition:</strong> When the <strong>background</strong> turns into <strong>red</strong>, all the <strong>arrow keys are reversed</strong>. Up becomes down, left becomes right, and so on. When the background is back to normal, everything is back to normal.
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    <strong class="important">Note:</strong> This site is the official version of 2048 MAD. This version is intended to test your focus and concentration. This shows that when you are out of focus, you will omit even a very obvious sign such as background change. 
+    </p>
+    <hr>
+    <p>
+    Created by <a href="#" target="_blank">Christophorus Dryantoro.</a> Based on <a href="http://gabrielecirulli.github.io/2048" target="_blank">2048 by Gabriele Cirulli</a> which is based on  <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
